force-app/main/default/objects/LLC_BI__Spread__c/fields/LLC_BI__Entity_Involvement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Entity_Involvement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required and automatically updated. Look up to the legal entity.</description>
    <label>Entity Involvement</label>
    <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
    <relationshipLabel>Spreads</relationshipLabel>
    <relationshipName>Spreads</relationshipName>
    <type>Lookup</type>
</CustomField>