force-app/main/default/objects/LLC_BI__Spread__c/fields/LLC_BI__Include_in_ratios__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Include_in_ratios__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is currently not being used</description>
    <label>Include in ratios</label>
    <type>Checkbox</type>
</CustomField>