force-app/main/default/objects/LLC_BI__Spread__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required. It is populated automatically whenever spreading begins for a Relationship on the Loan. This field specifies the Loan associated with the Spread.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Spreads</relationshipLabel>
    <relationshipName>Spreads</relationshipName>
    <type>Lookup</type>
</CustomField>