force-app/main/default/objects/LLC_BI__Spread__c/fields/LLC_BI__Spread_Statement_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Template__c</fullName>
    <description>This field is required. It is populated automatically whenever spreading begins for a Relationship on a Loan. This field specifies the Spread Statement Template associated with the Spread.</description>
    <label>Statement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LLC_BI__Spread_Statement_Type__c.LLC_BI__Is_Template__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>LLC_BI__Spread_Statement_Type__c</referenceTo>
    <relationshipLabel>Spreads</relationshipLabel>
    <relationshipName>Spreads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>