force-app/main/default/objects/LLC_BI__Spread__c/fields/LLC_BI__Underwriting_Summary__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Underwriting_Summary__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required. It is populated automatically whenever spreading begins for a Relationship on the Loan. This field specifies the Underwriting Summary associated with the Spread.</description>
    <label>Underwriting Summary</label>
    <referenceTo>LLC_BI__Underwriting_Summary__c</referenceTo>
    <relationshipLabel>Spreads</relationshipLabel>
    <relationshipName>Spreads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>